# advent-of-code-cpp

./: .gitignore  .gitmodules  LICENSE.txt  Makefile.am  README.md  README.zh-CN.md  configure.ac
m4/: ax_cxx_compile_stdcxx_20.m4  ax_cxx_compile_stdcxx_23.m4  ax_cxx_compile_stdcxx_26.m4  ax_cxx_compile_stdcxx_ex.m4  ax_init_cxxflags.m4
src/: Makefile.inc  main.cc
src/common/: Makefile.inc  common.hpp
src/utils/: Makefile.inc  cmd.cc  cmd.hpp  common.hpp  io.cc  io.hpp  strconv.hpp  types.hpp
src/year2025/: Makefile.inc
src/year2025/day1/: Makefile.inc  main.cc
src/year2025/day10/: Makefile.inc  main.cc
src/year2025/day11/: Makefile.inc  main.cc
src/year2025/day12/: Makefile.inc  main.cc
src/year2025/day2/: Makefile.inc  main.cc
src/year2025/day3/: Makefile.inc  main.cc
src/year2025/day4/: Makefile.inc  main.cc
src/year2025/day5/: Makefile.inc  main.cc
src/year2025/day6/: Makefile.inc  main.cc
src/year2025/day7/: Makefile.inc  main.cc
src/year2025/day8/: Makefile.inc  main.cc
src/year2025/day9/: Makefile.inc  main.cc
